# sharedmem

./: Cargo.toml  LICENSE  README.md
examples/: client.rs  reader.rs  server.rs  writer.rs
src/: channel.rs  core.rs  lib.rs  os.rs  portal.rs
