[package]
name = "sharedmem"
version = "0.3.1"
edition = "2024"
description = "Cross-platform lock-free shared-memory ring buffer for request/response IPC without sockets or disk files. Uses CreateFileMappingW on Windows and /dev/shm (tmpfs) on Unix."
license = "MIT"
repository = "https://github.com/hardglitch/sharedmem"
keywords = ["ipc", "shared-memory", "ring-buffer", "mmap", "lock-free"]
categories = ["concurrency", "os", "data-structures"]

[target."cfg(unix)".dependencies]
memmap2 = "0.9"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61", features = ["Win32", "Win32_System", "Win32_System_Memory", "Win32_Security"] }

[[example]]
name = "writer"
path = "examples/writer.rs"

[[example]]
name = "reader"
path = "examples/reader.rs"
